@@ -13,8 +13,6 @@ import reactor.core.publisher.Mono;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @RequiredArgsConstructor
 @Service
 public class TaskService {
@@ -30,7 +28,7 @@ public class TaskService {
     public List<ProjectGenerationTask> listTasks() {
         return taskAdapter.getTasks().stream()
                 .map(mapper::toDTO)
-                .collect(toList());
+                .toList();
     }
 
     public Flux<ProjectGenerationTask> reactiveTasks() {
